integration_tests/src/snapshots/integration_tests__regular_nft_tests__get_master_editions_page_before_third.snap
---
source: integration_tests/src/regular_nft_tests.rs
assertion_line: 1370
expression: response
snapshot_kind: text
---
{
  "master_edition_address": "8SHfqzJYABeGfiG1apwiEYt6TvfGQiL1pdwEjvTKsyiZ",
  "supply": 123,
  "max_supply": 10000,
  "editions": [
    {
      "mint": "GJvFDcBWf6aDncd1TBzx2ou1rgLFYaMBdbYLBa9oTAEw",
      "edition_address": "AoxgzXKEsJmUyF5pBb3djn9cJFA26zh2SQHvd9EYijZV",
      "edition": 1
    },
    {
      "mint": "9yQecKKYSHxez7fFjJkUvkz42TLmkoXzhyZxEf2pw8pz",
      "edition_address": "giWoA4jqHFkodPJgtbRYRcYtiXbsVytnxnEao3QT2gg",
      "edition": 2
    }
  ],
  "total": 2,
  "limit": 100,
  "before": "3"
}
