integration_tests/src/snapshots/integration_tests__regular_nft_tests__reg_get_asset.snap
---
source: integration_tests/src/regular_nft_tests.rs
assertion_line: 39
expression: response
snapshot_kind: text
---
{
  "interface": "ProgrammableNFT",
  "id": "CMVuYDS9nTeujfTPJb8ik7CRhAqZv4DfjfdamFLkJgxE",
  "content": {
    "$schema": "https://schema.metaplex.com/nft1.0.json",
    "json_uri": "https://madlads.s3.us-west-2.amazonaws.com/json/9964.json",
    "files": [],
    "metadata": {
      "name": "Mad Lads #9964",
      "symbol": "MAD",
      "token_standard": "ProgrammableNonFungible"
    },
    "links": {}
  },
  "authorities": [
    {
      "address": "2RtGg6fsFiiF1EQzHqbd66AhW7R5bWeQGpTbv2UMkCdW",
      "scopes": [
        "full"
      ]
    }
  ],
  "compression": {
    "eligible": false,
    "compressed": false,
    "data_hash": "",
    "creator_hash": "",
    "asset_hash": "",
    "tree": "",
    "seq": 0,
    "leaf_id": 0
  },
  "grouping": [
    {
      "group_key": "collection",
      "group_value": "J1S9H3QjnRtBbbuD4HjPV6RpRhwuk4zKbxsnCHuTgh9w",
      "verified": true
    }
  ],
  "royalty": {
    "royalty_model": "creators",
    "target": null,
    "percent": 0.042,
    "basis_points": 420,
    "primary_sale_happened": true,
    "locked": false
  },
  "creators": [
    {
      "address": "5XvhfmRjwXkGp3jHGmaKpqeerNYjkuZZBYLVQYdeVcRv",
      "share": 0,
      "verified": true
    },
    {
      "address": "2RtGg6fsFiiF1EQzHqbd66AhW7R5bWeQGpTbv2UMkCdW",
      "share": 100,
      "verified": true
    }
  ],
  "ownership": {
    "frozen": true,
    "delegated": true,
    "delegate": "GBkD9WsmSPNBF7bnFxyC4BCC2ZiBzYq9iWStPZ9Kj9cU",
    "ownership_model": "single",
    "owner": "A59E2tNJEqNN9TDnzgGnmLmnTsdRDoPocGx3n1w2dqZw"
  },
  "supply": {
    "print_max_supply": 0,
    "print_current_supply": 0,
    "edition_nonce": 255
  },
  "mutable": true,
  "burnt": false,
  "lamports": 5616720,
  "executable": false,
  "metadata_owner": "metaqbxxUerdq28cj1RbAWkYQm3ybzjb6a8bt518x1s",
  "rent_epoch": 0,
  "token_info": {
    "supply": 1,
    "decimals": 0,
    "token_program": "TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA",
    "mint_authority": "4Gwjsd6QrkEuU7nBECFnCgikiSfVyi97bXjeKj9ytF9p",
    "freeze_authority": "4Gwjsd6QrkEuU7nBECFnCgikiSfVyi97bXjeKj9ytF9p"
  }
}
